# recall-py

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  ruff.toml
.cursor/: hooks.json  mcp.json
.cursor/hooks/: tokenguard-after-response.sh  tokenguard-before-prompt.sh
.cursor/rules/: tokenguard.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  publish.yml
config/: default.yaml
docs/: architecture.md  cli.md  configuration.md  development.md  getting-started.md  index.md  library.md  mcp-tools.md
scripts/: docker-entrypoint.sh  docker-up.sh  mcp-stdio.sh  verify-setup.sh
src/recall_py/: __init__.py  context.py  engine.py  metrics.py
src/recall_py/providers/: base.py
src/recall_py/store/: db.py  repository.py
src/tokenguard/: __init__.py  __main__.py  app.py  cli.py  context.py  engine.py  hooks.py  indexing.py  mcp_server.py  metrics.py  ollama_client.py  onboard.py  retrieve.py  router.py  settings.py  threads.py
src/tokenguard/config/: default.yaml
src/tokenguard/providers/: __init__.py  base.py  ollama.py  openai_compat.py
src/tokenguard/proxy/: __init__.py  cache.py  streaming.py
src/tokenguard/store/: __init__.py  db.py  repository.py
src/tokenguard/text/: __init__.py  (+2 more)
tests/: test_automation.py  test_chunking.py  test_context.py  test_db.py  test_indexing.py  test_metrics.py  test_onboard.py  test_redact.py  test_router.py  test_settings_env.py  test_threads.py
